feat: expose nginx observability api
